🐛 FIX: Add only the aliases that work with now.sh

--- a/now.json
+++ b/now.json
@@ -3,8 +3,7 @@
   "name": "personal-website",
   "public": true,
   "alias": [
-    "kumarabhirup",
-    "www.kumarabhirup"
+    "kumarabhirup"
   ],
   "scope": "kumarabhirup",
   "build": {
