--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -39,7 +39,10 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "graphql-yoga": "^1.18.3",
+    "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.7"
+    "mongoose": "^5.7.7",
+    "prisma": "^1.34.10",
+    "prisma-client-lib": "^1.34.10"
   }
 }
