🚀 RELEASE: v1.0.0: Website made and launched

--- a/now.json
+++ b/now.json
@@ -3,7 +3,7 @@
   "name": "personal-website",
   "public": true,
   "alias": [
-    "kumarabhirup"
+    "kumar"
   ],
   "scope": "kumarabhirup",
   "build": {
