🐛 FIX: Fix all the linting tests

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -14,18 +14,19 @@
   },
   "dependencies": {
     "@zeit/next-sass": "^1.0.1",
-    "dotenv": "^8.1.0",
-    "next": "^9.0.5",
-    "node-sass": "^4.12.0",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
     "apollo-boost": "^0.1.27",
     "css-loader": "^2.1.0",
+    "dotenv": "^8.1.0",
     "get-age": "^1.0.1",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
+    "next": "^9.0.5",
     "next-with-apollo": "^3.3.2",
+    "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.9.0",
     "react-apollo": "^2.4.1",
+    "react-dom": "^16.9.0",
     "react-ga": "^2.5.7",
     "react-google-recaptcha": "^1.0.5",
     "react-router-dom": "^4.3.1",
