--- a/packages/backend/.env.example
+++ b/packages/backend/.env.example
@@ -1,4 +1,3 @@
-MONGODB_USERNAME="some MongoDB username"
-MONGODB_PASSWORD="MongoDB user's password"
-MONGODB_DATABASE="MongoDB Database name"
-MONGODB_CLUSTER="MongoDB Cluster name"
+PRISMA_SECRET="gh7....................vd....5"
+APILAYER_KEY="fe..........7c4..........6f2"
+RECAPTCHA_SERVER_KEY="6L..............9i..m.............18K"
