--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -13,17 +13,22 @@
     "test:ci": "NODE_ENV=test jest --passWithNoTests"
   },
   "dependencies": {
+    "@next/mdx": "^9.2.1",
     "@zeit/next-sass": "^1.0.1",
     "apollo-boost": "^0.1.27",
     "css-loader": "^2.1.0",
     "dotenv": "^8.1.0",
+    "file-loader": "^5.0.2",
     "get-age": "^1.0.1",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
-    "next": "^9.0.5",
+    "gray-matter": "^4.0.2",
+    "markdown-to-jsx": "^6.11.0",
+    "next": "^9.2.1",
     "next-with-apollo": "^3.3.2",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
+    "raw-loader": "^4.0.0",
     "react": "^16.9.0",
     "react-apollo": "^2.4.1",
     "react-dom": "^16.9.0",
