--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -23,7 +23,9 @@
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "gray-matter": "^4.0.2",
+    "markdown-air": "^0.0.4",
     "markdown-to-jsx": "^6.11.0",
+    "moment": "^2.24.0",
     "next": "^9.2.1",
     "next-with-apollo": "^3.3.2",
     "node-sass": "^4.12.0",
@@ -34,9 +36,11 @@
     "react-dom": "^16.9.0",
     "react-ga": "^2.5.7",
     "react-google-recaptcha": "^1.0.5",
+    "react-markdown": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
     "react-scroll": "^1.7.10",
+    "react-syntax-highlighter": "^12.2.1",
     "styled-components": "^4.1.3",
     "styled-css-grid": "^1.2.1",
     "waait": "^1.0.3"
