--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^2.1.0",
     "dotenv": "^8.1.0",
     "file-loader": "^5.0.2",
+    "fs": "^0.0.1-security",
     "get-age": "^1.0.1",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
