--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -16,6 +16,7 @@
     "@next/mdx": "^9.2.1",
     "@zeit/next-sass": "^1.0.1",
     "apollo-boost": "^0.1.27",
+    "browserify-fs": "^1.0.0",
     "css-loader": "^2.1.0",
     "dotenv": "^8.1.0",
     "file-loader": "^5.0.2",
