--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -28,14 +28,14 @@
     "markdown-air": "^0.0.4",
     "markdown-to-jsx": "^6.11.0",
     "moment": "^2.24.0",
-    "next": "^9.2.1",
+    "next": "^9.3.1",
     "next-with-apollo": "^3.3.2",
     "node-sass": "^4.12.0",
     "prop-types": "^15.7.2",
     "raw-loader": "^4.0.0",
-    "react": "^16.9.0",
+    "react": "^16.13.1",
     "react-apollo": "^2.4.1",
-    "react-dom": "^16.9.0",
+    "react-dom": "^16.13.1",
     "react-ga": "^2.5.7",
     "react-google-recaptcha": "^1.0.5",
     "react-markdown": "^4.3.1",
@@ -48,6 +48,7 @@
     "waait": "^1.0.3"
   },
   "devDependencies": {
+    "@babel/runtime-corejs2": "^7.9.2",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.3.0",
     "eslint-config-airbnb": "^18.0.1",
