--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -7,7 +7,7 @@
     "build": "tsc",
     "build:watch": "tsc --watch",
     "start": "npm run build && node dist/index.js",
-    "dev": "npm run build && nodemon dist/index.js",
+    "dev": "npm run build && concurrently --raw \"nodemon dist/index.js\" \"npm run build:watch\"",
     "lint": "eslint . --ext .js,.ts",
     "lint:fix": "eslint . --ext .js,.ts --fix",
     "test": "echo \"No tests specified\""
@@ -17,6 +17,7 @@
     "@typescript-eslint/eslint-plugin": "^2.0.0",
     "@typescript-eslint/parser": "^2.0.0",
     "babel-eslint": "^9.0.0",
+    "concurrently": "^5.2.0",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-prettier": "^4.3.0",
