--- a/now.json
+++ b/now.json
@@ -7,6 +7,7 @@
   "build": {
     "env": {
       "RECAPTCHA_CLIENT_KEY": "@kumarrecaptchaclientkey",
+      "TWITCH_CLIENT_ID": "@kumartwitchclientid",
       "GA_TRACKING_ID": "@kumargatrackingid"
     }
   },
