--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -1,4 +1,5 @@
 # Rename me to .env
 RECAPTCHA_CLIENT_KEY="6....UA............jKm"
 GA_TRACKING_ID="U.......21-6"
+TWITCH_CLIENT_ID="U.......21-6"
 KUMAR_BACKEND_URL="http://localhost:4000"
