--- a/now.json
+++ b/now.json
@@ -8,6 +8,7 @@
     "env": {
       "RECAPTCHA_CLIENT_KEY": "@kumarrecaptchaclientkey",
       "TWITCH_CLIENT_ID": "@kumartwitchclientid",
+      "TWITCH_OAUTH_ID": "@kumartwitchoauthid",
       "GA_TRACKING_ID": "@kumargatrackingid"
     }
   },
