--- a/packages/web/.env.example
+++ b/packages/web/.env.example
@@ -2,4 +2,5 @@
 RECAPTCHA_CLIENT_KEY="6....UA............jKm"
 GA_TRACKING_ID="U.......21-6"
 TWITCH_CLIENT_ID="U.......21-6"
+TWITCH_OAUTH_ID="siugfhwi8723eshh........fvsvwrgw"
 KUMAR_BACKEND_URL="http://localhost:4000"
