👌 IMPROVE: Add time and reading time in articles

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -33,6 +33,7 @@
     "react-syntax-highlighter": "^12.2.1",
     "react-text-transition": "^1.0.2",
     "react-twitch-embed-video": "^2.0.2",
+    "reading-time": "^1.2.0",
     "simple-icons": "^2.9.0",
     "styled-components": "^5.1.0"
   },
