--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -49,6 +49,7 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^2.0.1",
+    "globby": "^11.0.0",
     "jest": "^24.9.0",
     "prettier": "^1.16.4"
   }
