Subscribe to propagate.at

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,5 +23,9 @@
     "typescript",
     "typescriptreact"
   ],
-  "eslint.workingDirectories": ["packages/web", "packages/backend"]
+  "eslint.workingDirectories": [
+    "packages/web",
+    "packages/backend"
+  ],
+  "editor.autoSave": "off"
 }
