😅 TRY: Try Vercel

--- a/now.json
+++ b/now.json
@@ -33,7 +33,7 @@
     },
     {
       "src": "(.*)",
-      "dest": "packages/web$1",
+      "dest": "packages/web/package.json",
       "continue": true
     }
   ]
