😅 TRY: Try Vercel new routing

--- a/now.json
+++ b/now.json
@@ -33,7 +33,7 @@
     },
     {
       "src": "(.*)",
-      "dest": "packages/web/next.config.js",
+      "dest": "packages/web/$1",
       "continue": true
     }
   ]
