--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -43,7 +43,7 @@
     "isomorphic-fetch": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.7",
-    "prisma": "^1.34.10",
+    "prisma1": "^1.34.10",
     "prisma-client-lib": "^1.34.10"
   }
 }
