😅 TRY: Try new now.sh

--- a/now.json
+++ b/now.json
@@ -32,7 +32,7 @@
       "dest": "packages/backend/src/index.ts"
     },
     {
-      "src": "(.*)",
+      "src": "(.*)*",
       "dest": "packages/web/$1",
       "continue": true
     }
