--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -50,7 +50,12 @@
     "eslint-plugin-react": "^7.12.4",
     "eslint-plugin-react-hooks": "^2.0.1",
     "globby": "^11.0.0",
+    "html-webpack-plugin": "^5.2.0",
     "jest": "^24.9.0",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "webpack": "^5.24.3",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-middleware": "^4.1.0",
+    "webpack-dev-server": "^3.11.2"
   }
 }
