🐛 FIX: Revert to old simpleicons package, and add redirect links to socials

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -19,12 +19,12 @@
     "axios": "^0.19.2",
     "dotenv": "^8.2.0",
     "gray-matter": "^4.0.2",
-    "next": "^10.0.5",
+    "next": "^11.1.0",
     "next-transpile-modules": "^2.3.1",
     "raw-loader": "^4.0.1",
-    "react": "^17.0.1",
+    "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.0.2",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.2",
     "react-feather": "^2.0.4",
     "react-flexbox-grid": "^2.1.2",
     "react-markdown": "^4.3.1",
@@ -34,7 +34,7 @@
     "react-text-transition": "^1.0.2",
     "react-twitch-embed-video": "^2.0.2",
     "reading-time": "^1.2.0",
-    "simple-icons": "^5.10.0",
+    "simple-icons": "2.9.0",
     "styled-components": "^5.1.0"
   },
   "devDependencies": {
