--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^17.0.1",
     "react-feather": "^2.0.4",
     "react-flexbox-grid": "^2.1.2",
+    "react-grid-gallery": "^1.0.1-alpha.0",
     "react-markdown": "^4.3.1",
     "react-scroll-progress-bar": "^1.1.12",
     "react-spring": "^8.0.27",
