👌 IMPROVE: compress images

--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
   },
   "engines": {
     "node": ">=12.x"
+  },
+  "dependencies": {
+    "imagemin": "^8.0.1",
+    "imagemin-jpegtran": "^7.0.0",
+    "imagemin-pngquant": "^9.0.2"
   }
 }
