😅 TRY: node-gyp

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -5,9 +5,10 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
+    "vercel-build": "yarn global add node-gyp",
     "dev": "NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=development next -p 3001",
     "start": "NODE_ENV=production next start",
-    "build": "NODE_ENV=production next build",
+    "build": "NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=production next build",
     "lint": "eslint . --ext .js",
     "lint:fix": "eslint --ext .js --fix",
     "test": "NODE_ENV=test jest --passWithNoTests --watch",
