🐛 FIX: remove NODE_OPTIONS='--openssl-legacy-provider'

--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=development next -p 3001",
     "start": "NODE_ENV=production next start",
-    "build": "NODE_OPTIONS='--openssl-legacy-provider' NODE_ENV=production next build",
+    "build": "NODE_ENV=production next build",
     "lint": "eslint . --ext .js",
     "lint:fix": "eslint --ext .js --fix",
     "test": "NODE_ENV=test jest --passWithNoTests --watch",
